--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>20230618</version>
         </dependency>
 
+        <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
